添加问题详情接口
