# service/problem.go
@@ -4,6 +4,7 @@ import (
 	"gin-gorm-oj/define"
 	"gin-gorm-oj/models"
 	"github.com/gin-gonic/gin"
+	"gorm.io/gorm"
 	"log"
 	"net/http"
 	"strconv"
@@ -17,7 +18,7 @@ import (
 // @Param keyword query string false "keyword"
 // @Param category_identity query string false "category_identity"
 // @Success 200 {string} json "{"code":"200","data":""}"
-// @Router /getproblemlist [get]
+// @Router /problemlist [get]
 func GetProblemList(c *gin.Context) {
 	page, err := strconv.Atoi(c.DefaultQuery("page", define.DefaultPage))
 	size, err := strconv.Atoi(c.DefaultQuery("size", define.DefaultSize))
@@ -45,4 +46,43 @@ func GetProblemList(c *gin.Context) {
 			"count": count,
 		},
 	})
+}
+
+// GetProblemDetail
+// @Summary 问题详情
+// @Param identity query string false "problem_identity"
+// @Success 200 {string} json "{"code":"200","data":""}"
+// @Router /problemdetail [get]
+func GetProblemDetail(c *gin.Context) {
+	identity := c.Query("identity")
+	if identity == "" {
+		c.JSON(http.StatusOK, gin.H{
+			"code": -1,
+			"msg":  "问题唯一标识不能为空",
+		})
+		return
+	}
+	data := new(models.Problem)
+	err := models.DB.Where("identity = ?", identity).
+		Preload("ProblemCategories").Preload("ProblemCategories.Category").
+		First(&data).Error
+	if err != nil {
+		if err == gorm.ErrRecordNotFound {
+			c.JSON(http.StatusOK, gin.H{
+				"code": -1,
+				"msg":  "问题不存在",
+			})
+			return
+		}
+		c.JSON(http.StatusOK, gin.H{
+			"code": -1,
+			"msg":  "Get ProblemDetail Error" + err.Error(),
+		})
+		return
+	}
+	c.JSON(http.StatusOK, gin.H{
+		"code": 200,
+		"data": data,
+	})
+
 }
